--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,4 @@
-[[redirects]]
-  from = "/*"
-  to = "/login.html"
-  status = 200
-  force = true
-  conditions = { Role = ["visitor"] }
+[[headers]]
+for = "/*"
+[headers.values]
+Authorization = "Basic"
